--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,22 @@
 @import url(https://fonts.googleapis.com/css?family=Permanent+Marker);
 
 body {
-	background: url(../img/background.jpg) no-repeat center center fixed; 
-	background-color: rgba(80,80,80,0.7);
-	background-blend-mode: screen;
 	text-align: center;
 	font-family: Helvetica, sans-serif;
 	font-family: 'Permanent Marker', 'cursive';
 	font-size: 1.5em;
 }
+
+html { 
+  background: url(../img/background.jpg) no-repeat center center fixed; 
+  background-color: rgba(80,80,80,0.7);
+  background-blend-mode: screen;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 input {
 	border: 2px solid #999;
 	font-family: Helvetica, sans-serif;
